--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tabler/icons-vue": "^3.30.0",
     "@vueuse/core": "^11.1.0",
     "apexcharts": "^3.35.3",
+    "axios": "^1.8.1",
     "gsap": "^3.11.5",
     "nprogress": "^0.2.0",
     "perfect-scrollbar": "^1.5.5",
