--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vueuse/core": "^11.1.0",
     "apexcharts": "^3.35.3",
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "gsap": "^3.11.5",
     "nprogress": "^0.2.0",
     "perfect-scrollbar": "^1.5.5",
