--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "kui-dashboard-vue",
+  "name": "draganddrop",
   "version": "0.1.0",
   "type": "module",
   "description": "Admin dashboard template built with tailwindcss & vuejs.",
   "license": "MIT",
-  "homepage": "https://github.com/kamona-ui/kui-dashboard-vue",
+  "homepage": "https://github.com/baukamobile/draganddrop.git",
   "author": {
     "name": "Kamona UI",
     "email": "kamonaui@gmail.com",
-    "url": "https://github.com/kamona-ui"
+    "url": "https://github.com/baukamobile"
   },
   "scripts": {
     "dev": "vite",
@@ -18,6 +18,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@headlessui/vue": "^1.7.23",
     "@tabler/icons-vue": "^3.30.0",
     "@vueuse/core": "^11.1.0",
