--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "perfect-scrollbar": "^1.5.5",
     "vue": "^3.5.7",
     "vue-router": "^4.4.5",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuetify": "^3.7.14"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.2.15",
