--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "sass-embedded": "^1.85.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.12",
     "vite": "^5.4.14"
