--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@headlessui/vue": "^1.7.23",
     "@tabler/icons-vue": "^3.30.0",
-    "@vueuse/core": "^11.1.0",
+    "@vueuse/core": "^13.0.0",
     "ant-design-vue": "^4.2.6",
     "apexcharts": "^3.35.3",
     "axios": "^1.8.1",
@@ -30,9 +30,12 @@
     "gsap": "^3.11.5",
     "nprogress": "^0.2.0",
     "perfect-scrollbar": "^1.5.6",
+    "sortablejs": "^1.15.6",
     "vue": "^3.5.7",
     "vue-router": "^4.4.5",
+    "vue-sortable": "^0.1.3",
     "vue-toastification": "^2.0.0-rc.5",
+    "vuedraggable": "^4.1.0",
     "vuejs-logger": "1.5.5",
     "vuetify": "^3.7.14"
   },
