--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
     "vue-toastification": "^2.0.0-rc.5",
     "vuedraggable": "^4.1.0",
     "vuejs-logger": "1.5.5",
-    "vuetify": "^3.7.14"
+    "vuetify": "^3.7.14",
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/interaction": "^6.1.10",
+    "@fullcalendar/timegrid": "^6.1.10",
+    "@fullcalendar/vue3": "^6.1.10"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.2.15",
