--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "element-plus": "^2.9.7",
     "gsap": "^3.11.5",
     "nprogress": "^0.2.0",
     "perfect-scrollbar": "^1.5.6",
