--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "element-plus": "^2.9.7",
+    "flatpickr": "^4.6.13",
     "gsap": "^3.11.5",
     "nprogress": "^0.2.0",
     "perfect-scrollbar": "^1.5.6",
