--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.8.1",
     "bpmn-js": "^18.4.0",
     "bpmn-js-properties-panel": "^5.35.0",
+    "camunda-bpmn-moddle": "^7.0.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "element-plus": "^2.9.7",
